--- a/src/app/a-login/a-login.component.html
+++ b/src/app/a-login/a-login.component.html
@@ -1,9 +1,9 @@
 
 <div class="formada">
-    
-      <form class =" p-4"action="">
+
+      <form class =" p-4"action="#">
         <h4>Peça sua conta e cartão de crédito do Copybank </h4>
-        <input type="email" placeholder="Digite seu CPF" id="cpf" class="campo">
+        <input type="number" placeholder="Digite seu CPF"  id="cpf" class="campo">
         <br>
         <a href="https://nicolas-nl.github.io/projeto-g" target="_blank" onclick="openToggle()" class="btn btn-primary">Continuar</a>
       </form>
