--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer class="footer">
     <div class=" container d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-  
+
       <a class="navbar-brand" href="#nu"><svg width="44" height="24" viewBox="0 0 58 32"
           xmlns="http://www.w3.org/2000/svg">
           <path
@@ -12,7 +12,7 @@
         </svg></a>
       <br>
       <p>
-        © 2023 Cu Pagamentos S.A - Instituição de Mudança de Vida. 18.236.120/0001-xx
+        © 2023 Copy Pagamentos S.A - Instituição de Mudança de Vida. 18.236.120/0001-xx
         <br>
         Rua dos Bobos,  n°0 - São Paulo, SP - 696969-242424
       </p>
