--- a/src/app/navbar-man/navbar-man.component.css
+++ b/src/app/navbar-man/navbar-man.component.css
@@ -3,12 +3,12 @@
     width: 100%;
     height: 64px;
     position:fixed;
-    background-color: white; 
+    background-color: white;
     top: -1px;
     z-index: 1px;
 }
 h1{
-    font-size:20px; 
+    font-size:20px;
     margin-right: 5px;
 }
 img{
@@ -59,3 +59,43 @@ img{
 .nav-list.active{
     transform: translateX(0);
 }
+.dropbtn {
+  font-size: large;
+  background-color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: white;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #ddd;}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {display: block;}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {background-color: #3e8e41;}
