--- a/src/app/navbar-man/navbar-man.component.html
+++ b/src/app/navbar-man/navbar-man.component.html
@@ -3,21 +3,46 @@
     <img src="assets/nubank-logo.png">
     <div class="container-fluid container ms-5 align-items-center">
         <div class="row mx-auto">
-            <div class="col">
-                <h1>Página Inicial</h1>
+          <div class="dropdown">
+            <button class="dropbtn">Página Inicial</button>
+            <div class="dropdown-content">
+              <a href="#">Link 1</a>
+              <a href="#">Link 2</a>
+              <a href="#">Link 3</a>
             </div>
-            <div class="col">
-                <h1>Para você</h1>
+          </div>
+           <div class="dropdown">
+            <button class="dropbtn">Para Você</button>
+            <div class="dropdown-content">
+              <a href="#">Link 1</a>
+              <a href="#">Link 2</a>
+              <a href="#">Link 3</a>
             </div>
-            <div class="col">
-                <h1>Para seu negócio</h1>
             </div>
-            <div class="col">
-                <h1>O Nubank</h1>
-            </div>
-            <div class="col">
-                <h1>Perguntas</h1>
-            </div>
+            <div class="dropdown">
+              <button class="dropbtn">Para seu Negocio</button>
+              <div class="dropdown-content">
+                <a href="#">Link 1</a>
+                <a href="#">Link 2</a>
+                <a href="#">Link 3</a>
+              </div>
+              </div>
+              <div class="dropdown">
+                <button class="dropbtn">O Nubank</button>
+                <div class="dropdown-content">
+                  <a href="#">Link 1</a>
+                  <a href="#">Link 2</a>
+                  <a href="#">Link 3</a>
+                </div>
+                </div>
+                <div class="dropdown">
+                  <button class="dropbtn">Perguntas</button>
+                  <div class="dropdown-content">
+                    <a href="#">Link 1</a>
+                    <a href="#">Link 2</a>
+                    <a href="#">Link 3</a>
+                  </div>
+                  </div>
         </div>
     </div>
 </nav>
